Fix note body text-overflow & note size

--- a/src/components/Notes/subcomponents/Note.css
+++ b/src/components/Notes/subcomponents/Note.css
@@ -40,9 +40,10 @@
   padding: 0.8rem;
   border-radius: 0.6rem;
 
-  max-height: 350px;
+  max-height: 300px;
   text-wrap: wrap;
   white-space: pre-line;
+  word-break: break-all;
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-width: thin;
